--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,11 @@
-
 [server]
-maxUploadSize = 100
+headless = true
+address = "0.0.0.0"
+port = 5000
+maxUploadSize = 100000000
+
+[theme]
+primaryColor = "#FF4B4B"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
